# pandera

./: README.md  pyproject.toml
docs/: index.md
tests/: funcao_teste.py
